--- a/sgu-backend/src/main/resources/application.properties
+++ b/sgu-backend/src/main/resources/application.properties
@@ -3,14 +3,10 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
 
-#db.host=${DB_HOST}
-#db.port=${DB_PORT}
-#db.name=${DB_NAME}
-#db.user=${DB_USER}
-#db.pass=${DB_PASS}
+server.port=${SERVER_PORT}
 
-DB_HOST=localhost
-DB_PORT=3306
-DB_NAME=sgu_database
-DB_USER=root
-DB_PASS=root
+db.host=${DB_HOST}
+db.port=${DB_PORT}
+db.name=${DB_NAME}
+db.user=${DB_USER}
+db.pass=${DB_PASS}
